change some issues

--- a/apps/nx-monorepo-ang/src/app/layout/menu/menu.component.html
+++ b/apps/nx-monorepo-ang/src/app/layout/menu/menu.component.html
@@ -9,4 +9,8 @@
     <li><a routerLink="/product/list">Product list</a></li>
     <li><a routerLink="/product/detail/1">Product detail</a></li>
   </ul>
+  <span>User</span>
+  <ul>
+    <li><a routerLink="/user/info">User Info</a></li>
+  </ul>
 </div>
