--- a/apps/nx-monorepo-ang/src/app/pages/user/user.component.html
+++ b/apps/nx-monorepo-ang/src/app/pages/user/user.component.html
@@ -1,6 +1,5 @@
-<p>Product template</p>
-<h2>Product get data Info to service</h2>
+<p>UserModule</p>
 <div style="margin-left: 20px; display: inline-block">
   <router-outlet></router-outlet>
 </div>
-<p>End Product template</p>
+<p>End UserModule</p>
