--- a/apps/nx-monorepo-ang/src/app/pages/product/product-detail/product-detail.component.html
+++ b/apps/nx-monorepo-ang/src/app/pages/product/product-detail/product-detail.component.html
@@ -1,1 +1,5 @@
 <p>product-detail works!</p>
+<hr />
+{{productFacade.title$ | async}}
+<hr />
+<button (click)="onChangeTitleFromStore()">Change Title To Store</button>
