--- a/apps/nx-monorepo-ang/src/app/pages/product/product.component.html
+++ b/apps/nx-monorepo-ang/src/app/pages/product/product.component.html
@@ -1,5 +1,6 @@
 <p>Product template</p>
 <h2>Product get data Info to service</h2>
+<p>Data from store: {{productFacade.title$ | async}}</p>
 <div style="margin-left: 20px; display: inline-block">
   <router-outlet></router-outlet>
 </div>
