--- a/apps/nx-monorepo-ang/src/app/pages/user/user.component.html
+++ b/apps/nx-monorepo-ang/src/app/pages/user/user.component.html
@@ -1,4 +1,5 @@
 <p>UserModule</p>
+<h2>Demo service: Parent to child</h2>
 <div style="margin-left: 20px; display: inline-block">
   <router-outlet></router-outlet>
 </div>
